--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+.calculator-container {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
 .display {
 	width: 50em;
 	height: 5em;
@@ -9,4 +15,9 @@
 	width: 50em;
 	height: 2em;
 	border: 1px solid black;
+}
+
+.buttons-container {
+	display: flex;
+	flex-direction: column;
 }
